--- a/docs/index.css
+++ b/docs/index.css
@@ -29,6 +29,22 @@ textarea {
   box-sizing: border-box;
 }
 
+.tab {
+  display: inline-block;
+  width: 25px;
+}
+
+#logs-info .result {
+  padding: 6px 10px;
+}
+
+#grammar-tree-info {
+  font-family: 'Courier New', 'Roboto', 'Helvatica', Tahoma, sans-serif !important;
+  color: #666;
+  font-size: 1.2rem;
+  padding: 20px 35px;
+}
+
 .tabs-title > a {
   font-size: 1rem;
 }
